--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,8 @@
 @import "normalize.css";
 
+@import "./variables.scss";
+@import "@blueprintjs/core/src/blueprint.scss";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
