Update UI colors and styles
* Add more rounded corners
* Add custom colors
* Create custom primary navbar class
* Add gaps between navbar and control bar elements
* Create mock run button
* Update editor theme and font size
* Render control bar in playground

--- a/src/styles/ControlBar.module.scss
+++ b/src/styles/ControlBar.module.scss
@@ -1,8 +1,16 @@
+@import "src/styles/variables.scss";
+
 .control-bar {
+  border-top: 1px solid $dark-gray4;
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-color: #1a2530;
+  background-color: $dark-gray1;
   padding-inline: 12px;
+  column-gap: 6px;
+
+  button {
+    font-weight: 600;
+  }
 }
