--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,17 @@
 // Override Blueprint variables
-$dark-gray4: #151515;
+
+$pt-border-radius: 8px;
+
+$dark-gray1: #111419;
+$dark-gray2: #191e25;
+$dark-gray3: #1d232a;
+$dark-gray4: #2a323d;
+$dark-gray5: #3d434b;
+
+$light-gray1: #bebdbd;
+$light-gray2: #c7c8c8;
+$light-gray3: #d4d2d2;
+$light-gray4: #d6d6d6;
+$light-gray5: #d8d8db;
+
+$white: #eaeaea;
