--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,3 +15,10 @@ $light-gray4: #d6d6d6;
 $light-gray5: #d8d8db;
 
 $white: #eaeaea;
+
+// Custom colors
+$cadet-color-1: #1a2530;
+$cadet-color-2: #2c3e50;
+$cadet-color-3: #34495e;
+$cadet-color-4: #ced9e0;
+$cadet-color-5: #ffffff;
