--- a/src/styles/Sicp.module.scss
+++ b/src/styles/Sicp.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/variables.scss";
+
 .sicp-container {
   height: 100%;
   overflow-y: auto;
@@ -75,6 +77,7 @@
 
 .sicp-exercise {
   background-color: #fff;
+  margin-bottom: 10px;
 
   > * + * {
     margin-top: 5px;
@@ -84,4 +87,27 @@
 .sicp-show-solution-button {
   display: flex;
   justify-content: flex-end;
+}
+
+.sicp-anchor-link-container {
+  position: relative;
+}
+
+.sicp-anchor-link {
+  position: absolute;
+  left: -2.5rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $dark-gray4;
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: $dark-gray4;
+    color: #fff;
+  }
 }
