Set up responsive editor
* Create folder mode switch in control bar
* Add tooltip to editor tab menu button toggle
* Create props, link control bar multi file mode to editor
* Render either control bar or mobile control bar depending on the
  screen width
* Update control bar styles for better contrast and theming

--- a/src/styles/ControlBar.module.scss
+++ b/src/styles/ControlBar.module.scss
@@ -6,11 +6,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-color: $dark-gray1;
+  background-color: $dark-gray2;
   padding-inline: 12px;
   column-gap: 6px;
 
-  button {
+  .run-button {
     font-weight: 600;
   }
 }
