--- a/src/styles/NavigationBar.module.scss
+++ b/src/styles/NavigationBar.module.scss
@@ -1,7 +1,7 @@
-@import "src/styles/variables.scss";
+@use "src/styles/variables.scss" as vars;
 
 .primary-navbar {
-  background-color: $dark-gray1 !important;
+  background-color: vars.$dark-gray1 !important;
 }
 
 .navlink {
