--- a/src/styles/Playground.module.scss
+++ b/src/styles/Playground.module.scss
@@ -1,4 +1,4 @@
-@import "src/styles/variables.scss";
+@use "src/styles/variables.scss" as vars;
 
 .mobile-side-content-container {
   display: flex;
@@ -7,10 +7,10 @@
 
 .mobile-side-content {
   width: 100%;
-  background-color: $cadet-color-3;
+  background-color: vars.$cadet-color-3;
   user-select: none;
   padding: 6px 10px;
-  border-top: 5px solid $cadet-color-2;
+  border-top: 5px solid vars.$cadet-color-2;
 
   > * + * {
     margin-top: 10px;
@@ -24,5 +24,5 @@
 }
 
 .mobile-side-content-resize-handle {
-  background-color: $cadet-color-2;
+  background-color: vars.$cadet-color-2;
 }
